
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int keynum; size_t flen; int keydef; } ;
typedef TYPE_1__ fkeyarg_t ;


 int SETFKEY ;
 int ioctl (int ,int ,TYPE_1__*) ;
 int memset (int *,int ,int) ;

void heapOverflow(int index, size_t size) {
 fkeyarg_t fkey;

 fkey.keynum = index;
 fkey.flen = size;
 memset(&fkey.keydef, 0, 16);

 ioctl(0, SETFKEY, &fkey);
}
